Paint theme background correctly on Mac fullscreen

In fullscreen, the top menu bar may slide down on Mac. Chrome shift the
top UI under the menu bar. In such case, we should paint the theme
according to the new location. This CL fixes this by taking that Y
offset shift into account.

BUG=877438

Change-Id: I073fe3641b0d37af1d87b73fea79cebc8f71c94f
Reviewed-on: https://chromium-review.googlesource.com/1188834
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586420}
Former-commit-id: 1da75893a70709938668f553889d7a6be0fd47d0